fix alignment of permission title/combobox

--- a/magpie/ui/home/static/style.css
+++ b/magpie/ui/home/static/style.css
@@ -921,17 +921,25 @@ div.tree-button {
 }
 
 .permission-title {
+    /* make text >width employ an ellipsis with scroll that auto apply/remove when using it for too long titles */
+    text-overflow: ellipsis;
+    overflow: auto;
+    text-align: left;
+}
+
+.permission-cell {
     /* ensure that sufficient space is provided to fit all possible permission-name side-by-side
        align with combobox and checkbox, must include both their respective width
     */
     float: right;
-    text-align: left;
-    margin-right: 0.5em;  /* spacing with disallowed text to ensure one title doesn't end flush where the next begins */
-    width: 9.5em;   /* [width = <desired-width> + permission-entry.width + permission-checkbox.width - margin-right] */
+    margin-left: 0.5em;  /* spacing with disallowed text to ensure one title doesn't end flush where the next begins */
+    width: 9.5em;   /* [width = <desired-width> + permission-entry.width + permission-checkbox.width - margin-left] */
 
-    /* make text >width employ an ellipsis with scroll that auto apply/remove when using it for too long titles */
-    text-overflow: ellipsis;
-    overflow: auto;
+    display: inline-flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .permission-title-effective {
@@ -940,15 +948,12 @@ div.tree-button {
 }
 
 .permission-entry {
-    float: right;
     text-align: left;
     margin-top: 0.05em;
-    margin-right: 0.5em;    /* must be included in 'permission-title' width */
 }
 
 .permission-checkbox {
     width: 1.5em;
-    float: right;
     text-align: left;
     margin-top: 0.1em;
     margin-right: 0;        /* must be included in 'permission-title' width, affects width of 'permission-effective' */
